<resources>
    <string name="app_name">cryptoWallet</string>
    <string name="wallet_menu_title">Wallet</string>
    <string name="request_menu_title">Request</string>
    <string name="send_menu_title">Send</string>
    <string name="bottom_sheet_barcode_this_is_the_address">This is the Address</string>
    <string name="bottom_sheet_barcode_copy_to_clipboard">Copy To Clipboard</string>
    <string name="bottom_sheet_menu_are_you_sure_you_want_to_logout">Are you sure you want to Logout?</string>
    <string name="bottom_sheet_menu_logout">Logout</string>
    <string name="bottom_sheet_menu_cancel">Cancel</string>
    <string name="fragment_request_content_description_media">content_description_media</string>
    <string name="fragment_request_request_money_share_addrress_qr">Request Money (Share Addrress/Qr)</string>
    <string name="fragment_request_money_dialog_content_description_mediax">content_description_media</string>
    <string name="fragment_request_money_dialog_content_description_media">content_description_media</string>
    <string name="fragment_request_money_dialog_address">Address:</string>
    <string name="fragment_send_content_description_media">content_description_media</string>
    <string name="fragment_send_send_money">Send Money</string>
    <string name="fragment_send_amount">Amount</string>
    <string name="fragment_send_currency_search_or_select">Currency (Search/Select from wallets)</string>
    <string name="fragment_send_to_email_or_address">To (Email or Address)</string>
    <string name="fragment_send_send">Send</string>
    <string name="fragment_send_scan">Scan</string>
    <string name="fragment_send_money2fa_dialog_content_description_media">content_description_media</string>
    <string name="fragment_send_money2fa_dialog_two_factor_authentication_token">Two Factor Authentication Token:</string>
    <string name="fragment_send_money2fa_dialog_two_factor_authentication_token_recieved_from_sms">Please wait for SMS</string>
    <string name="fragment_send_money_confirm_dialog_content_description_media">content_description_media</string>
    <string name="fragment_send_money_confirm_dialog_confirmation">Confirmation:</string>
    <string name="fragment_transaction_details_content_description_media">content_description_media</string>
    <string name="fragment_transaction_details_transactions">Transactions:</string>
    <string name="fragment_wallet_content_description_media">content_description_media</string>
    <string name="fragment_wallet_your_wallets_click_for_details">Your Wallets (Click for details)</string>
    <string name="fragment_wallet_details_logo">logo</string>
    <string name="fragment_wallet_details_name">Name:</string>
    <string name="fragment_wallet_details_currency">Currency:</string>
    <string name="fragment_wallet_details_amount">Amount:</string>
    <string name="send_confirm_dialog_transaction_not_completed">Transaction could not be completed</string>
    <string name ="send_confirm_dialog_transaction_successful">"Transation Successful, you will receive an email with confirmation. \n Keep in mind, transactions may take between 30 minutes and one hour to complete."</string>
    <string name="accept_button">Accept</string>
    <string name="dialog_send">Send</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_request">Request</string>
    <string name="dialog_close">Close</string>
    <string name="fragment_show_transactions_select_for_details">Transactions(Select for Details)</string>
    <string name="bottom_nav_menu_transactions">Transactions</string>
    <string name="bottom_nav_menu_logout">Logout</string>
    <string name="fragmentSend_searchView_hint">Search</string>
    <string name="fragmentShowTransactions_searchView_queryHint">Search</string>
    <string name="fragmentRequest_SearchViewRequest_queryHint">Search</string>
    <string name = "url_string">https://www.coinbase.com/oauth/authorize?client_id=%1$s&amp;redirect_uri=urn:ietf:wg:oauth:2.0:oob&amp;response_type=code&amp;account=all&amp;scope=wallet:accounts:read wallet:addresses:create wallet:addresses:read wallet:accounts:update wallet:accounts:create wallet:transactions:send wallet:transactions:request wallet:transactions:read&amp;meta[send_limit_amount]=1&amp;meta[send_limit_currency]=USD&amp;meta[send_limit_period]=day</string>
    <string name="icon_address_request_fragment">https://api.coinicons.net/icon/%1$s/128x128</string>
    <string name="icon_address_send_fragment">https://api.coinicons.net/icon/%1$s/128x128</string>
    <string name ="icon_address_show_transactions_fragment">https://cryptoicon-api.vercel.app/api/icon/%1$s</string>
    <string name="transactions_details_dialog_icon_address">"https://cryptoicon-api.vercel.app/api/icon/%1$s</string>
    <string name="transaction_adapter_transaction_id_text">ID: %1$s</string>
    <string name="transaction_adapter_amount">Amount: %1$s / </string>
    <string name="transaction_adapter_transaction_status_text">Status: %1$s</string>
    <string name="transaction_adapter_native_amount">Native Amount: %1$s / "</string>
    <string name="transaction_adapter_transaction_type_sent_debited">Transaction: Debited/Sent</string>
    <string name="transaction_adapter_transaction_type_received_deposit">Transaction: Deposit/Received</string>
    <string name="transaction_adapter_transaction_day_time_text">Created at: %1$s</string>
    <string name="wallet_request_adapter_wallet_id_text">Balance: %1$s</string>
    <string name="wallet_request_adapter_wallet_currency_text">Currency: %1$s</string>
    <string name="wallets_adapter_wallets_currency_text">Currency: %1$s</string>
    <string name="wallet_send_adapter_wallet_id_text">Balance: %1$s</string>
    <string name="wallet_send_adapter_wallet_currency_text">Currency: %1$s</string>
    <string name="repository_icon_address">https://cryptoicon-api.vercel.app/api/icon/%1$s</string>
    <string name="repository_url_for_qr">http://api.qrserver.com/v1/create-qr-code/?data=%1$s&amp;size=1600x1600</string>

</resources>