<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardLogo_wallet_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardElevation="@dimen/card_elevation"
            app:cardCornerRadius="@dimen/fragmentWalletDetails_CardViewCardLogoWallDetails_cornerRadius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/wallet_details_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fragmentWalletDetails_ImageViewDetailsImage_height"
                    android:contentDescription="@string/fragment_wallet_details_logo"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/logo" />

                <TextView
                    android:id="@+id/wallet_details_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_4dp"
                    android:text="@string/fragment_wallet_details_name"
                    android:textAppearance="@style/TextAppearance.Body1"
                    android:textAlignment="center"
                    android:paddingStart="@dimen/standard_8dp"
                    android:paddingEnd="@dimen/standard_8dp"
                    android:paddingBottom="@dimen/standard_8dp"
                    android:background="@android:drawable/editbox_background" />

                <TextView
                    android:id="@+id/wallet_details_currency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_4dp"
                    android:text="@string/fragment_wallet_details_currency"
                    android:textAppearance="@style/TextAppearance.Body1"
                    android:textAlignment="center"
                    android:paddingStart="@dimen/standard_8dp"
                    android:paddingEnd="@dimen/standard_8dp"
                    android:paddingBottom="@dimen/standard_8dp"
                    android:background="@android:drawable/editbox_background"/>

                <TextView
                    android:id="@+id/wallet_details_balance_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_4dp"
                    android:text="@string/fragment_wallet_details_amount"
                    android:textAppearance="@style/TextAppearance.Body1"
                    android:textAlignment="center"
                    android:paddingStart="@dimen/fragmentWalletDetails_TextViewDetailsBalaceAmount_paddingStart"
                    android:paddingEnd="@dimen/standard_8dp"
                    android:paddingBottom="@dimen/standard_8dp"
                    android:background="@android:drawable/editbox_background"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>